--- a/LoginPage/Screeen.css
+++ b/LoginPage/Screeen.css
@@ -1,18 +1,46 @@
 body {
+    /* background-size: contain; */
+    /* Center and scale the image nicely */
+    /*
+    
+    
+    Full height */
+    /* margin-bottom: auto; */
+}
+
+html {
     background-image: url(./pexels-andy-vu-3244513.jpg);
+    /* background: linear-gradient(to bottom right, rgb(236, 144, 158), rgb(255, 77, 106)); */
+    margin-bottom: 0%;
     background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
 }
 
 h1 {
-    margin-left: 100px;
+    /* faceboook logo */
     margin-top: 1px;
-    color: black;
-    background-color: rgb(178, 214, 215);
+    color: white;
     padding: 4px;
     text-align: center;
     width: 9rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-shadow: 3px 3px blue;
+    /* box-shadow: 3px 3px blue; */
+    text-shadow: 3px 3px blue;
+    /* background-color: aqua; */
+    margin-left: 44%;
+    margin-top: 7%;
+    margin-bottom: 30px;
+    position: fixed;
+    border-radius: 6px;
+}
+
+h1:hover {
+    border: 3px solid;
+    border-color: white;
+    background-color: blue;
+    /* padding: 0px; */
+    /* color: white; */
 }
 
 label {
@@ -24,26 +52,57 @@ label {
 
 input {
     align-content: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: larger;
     margin-left: 10px;
 }
 
-#Login {
-    margin-left: 100px;
-    margin-bottom: 20px;
+input:hover {
+    background-color: rgba(0, 0, 255, 0.21);
+    color: black;
 }
 
-#login:hover {
+u {
+    color: blue;
+}
+
+u:hover {
     color: black;
+}
+
+#Login {
+    margin-left: 35%;
+    background-color: white;
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-color: blue;
+    /* margin-bottom: 20px; */
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    border: 3px solid;
+}
+
+#Login:hover {
+    background-color: blue;
+    border-color: white;
+    color: white;
+    border: 1px solid;
+    box-shadow: 3px 3px 3px black;
 }
 
 .page {
     width: 300px;
     height: 300px;
-    margin-top: 150px;
-    margin-left: 400px;
-    background-color: lightskyblue;
-    box-shadow: 5px 5px salmon;
-    border: 3px solid rgba(0, 0, 0, 0.306);
+    margin-top: 15%;
+    margin-left: 35%;
+    /* box-shadow: 5px 5px rgb(0, 54, 248); */
+    padding: 5px;
+    padding-bottom: 15px;
+    position: fixed;
+    /* background-color: rgba(255, 255, 255, 0.356); */
+    border: 3px solid rgb(0, 0, 0);
+    background-color: white;
 }
